trunk/Archive2/f9/ec9e813fc020ce/output
main.cpp: In function 'double specialRound(double, int)':
main.cpp:6:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: At global scope:
main.cpp:5:28: warning: unused parameter 'x' [-Wunused-parameter]
 double specialRound(double x, int precision) {
                            ^
main.cpp:5:35: warning: unused parameter 'precision' [-Wunused-parameter]
 double specialRound(double x, int precision) {
                                   ^
main.cpp: In function 'int main()':
main.cpp:9:7: error: 'g' was not declared in this scope
     g();
       ^
main.cpp:11:7: error: 'f' was not declared in this scope
     f();
       ^
